--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-11-23 Fri 11:57]
+#+CAPTION: Clock summary at [2018-11-23 Fri 16:49]
 | <75>                                                                        |          |        |        |       |
 | Headline                                                                    | Time     |        |        |     % |
 |-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                                                | *124:44* |        |        |   0.0 |
+| *Total time*                                                                | *125:56* |        |        |   0.0 |
 |-----------------------------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                                     | 124:44   |        |        |   0.0 |
-| Active                                                                      |          | 124:44 |        |   0.0 |
+| Stories                                                                     | 125:56   |        |        |   0.0 |
+| Active                                                                      |          | 125:56 |        |   0.0 |
 | Edit release notes for previous sprint                                      |          |        |   2:03 |   0.0 |
 | Sprint and product backlog grooming                                         |          |        |   3:10 |   0.0 |
 | Work on MASD theory                                                         |          |        | 113:38 |   0.0 |
 | Read up on framework and API design                                         |          |        |   0:57 |   0.0 |
 | Rename models to fit MASD architecture                                      |          |        |   4:56 |   0.0 |
+| Great meta-data rename                                                      |          |        |   1:12 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -247,7 +248,10 @@ We now have the following top-level models:
 
 We need to update the models to match this.
 
-*** Great meta-data rename                                            :story:
+*** STARTED Great meta-data rename                                    :story:
+    :LOGBOOK:
+    CLOCK: [2018-11-23 Fri 15:37]--[2018-11-23 Fri 16:49] =>  1:12
+    :END:
 
 All of the existing stereotypes and meta-data need to be moved from
 the existing names (e.g. =quilt=, =yarn=, etc) into
@@ -264,6 +268,11 @@ It is very unlikely dia users will need lines starting with =masd.=.
 
 We should probably try to tackle this rename sooner rather than later
 since it badly breaks model-compatibility.
+
+We should use the new names as part of this rename, e.g.:
+
+: masd.injection.dia.comment
+: masd.extraction.cpp.enabled
 
 *** Create the =orchestration= model                                  :story:
 
