--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -250,6 +250,7 @@ We need to update the models to match this.
 
 *** STARTED Great meta-data rename                                    :story:
     :LOGBOOK:
+    CLOCK: [2018-11-23 Fri 16:57]
     CLOCK: [2018-11-23 Fri 16:50]--[2018-11-23 Fri 16:56] =>  0:06
     CLOCK: [2018-11-23 Fri 15:37]--[2018-11-23 Fri 16:49] =>  1:12
     :END:
